--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,7 +1,7 @@
 $font-stack: Arial, Helvetica, sans-serif;
 //colors
 
-$primary-color: rgb(221, 56, 50);
+$primary-color: #f01f3c;
 $secondary-color: rgb(197, 195, 195);
 $overcolor:rgb(107, 95, 95);
 $aletter:white;
