--- a/scss/home.scss
+++ b/scss/home.scss
@@ -31,7 +31,7 @@ main {
 }
 .wrapper{
     background-color:$secondary-color;
-    padding-left:10%;
+  /**  padding-left:10%;**/
 }
 .column{
     padding-left:20px;
